--- a/views/skill/show.ejs
+++ b/views/skill/show.ejs
@@ -10,15 +10,8 @@
 
 <body>
     <a href="/">HOME</a>
-    <h1>Skills</h1>
-    <ul>
-        <% skills.forEach(function(s) { %>
-        <li>
-            <%= s.language %>
-            <a href="/skills/<%= s.id %>">Details</a>
-        </li>
-        <% }); %>
-    </ul>
-    </body>
+    <h3>Skill Detail</h3>
+    <%=skill.language %>
+</body>
 <
 </html>
