--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,6 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-    <a href="/skill">SKILLS</a>
+    <a href="/skills">SKILLS</a>
   </body>
 </html>
