--- a/views/skill/index.ejs
+++ b/views/skill/index.ejs
@@ -1,24 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
 
-    <title>Express-Dev-Skills</title>
-</head>
+<%- include('../partials/header')%>
 
-<body>
-    <a href="/">HOME</a>
-    <h1>Skills</h1>
+
     <ul>
         <% skills.forEach(function(s) { %>
         <li>
+            <form 
+            action="/skills/<%=s.id%>?_method=DELETE" 
+            method="POST"
+            class="delete-form"
+            >
+                <button type="submit">X</button>
+            </form>
             <%= s.language %>
             <a href="/skills/<%= s.id %>">Details</a>
         </li>
         <% }); %>
     </ul>
-    </body>
-<
-</html>
+    <a href="/skills/new">Add a Coding Skill</a>
+
+    <%- include('../partials/header')%>
+    
