--- a/views/skill/show.ejs
+++ b/views/skill/show.ejs
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
 
-    <title>Express-Dev-Skills</title>
-</head>
+<%- include('../partials/header') %>
 
-<body>
-    <a href="/">HOME</a>
-    <h3>Skill Detail</h3>
-    <%=skill.language %>
-</body>
-<
-</html>
+<h3>Skill Detail</h3>
+<h3><%=skill.language %></h3>
+
+<%- include('../partials/footer') %>
